tests/ui/parser/misspelled-keywords/for-loop.rs
fn main() {
    form i in 1..10 {}
    //~^ ERROR expected one of
}
